posiGen_FullsendBox/src/objects/Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By_Accounting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved By Accounting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inv_Due_Date__c</fullName>
        <inlineHelpText>Due Date of Invoice</inlineHelpText>
        <label>Inv Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inv_Paid_Status__c</fullName>
        <inlineHelpText>Select if invoice was paid or not from the drop down.</inlineHelpText>
        <label>Inv Paid Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unpaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <inlineHelpText>Total Invoice Amount</inlineHelpText>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PG_Inv_Approved__c</fullName>
        <inlineHelpText>Approval of invoice after work has been performed to scope of work defined in contract (site assessment docs upload, install QC completed, etc)</inlineHelpText>
        <label>PG Invoice Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PV_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PV System</label>
        <referenceTo>Systems__c</referenceTo>
        <relationshipName>Task_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectId_from_Task__c</fullName>
        <formula>Task__r.ProjectId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId from Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Field dependency to display the attachment types for each state</description>
        <inlineHelpText>By selecting the state in which you perform the work, the appropriate attachment types will be available to select</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter_Notes__c</fullName>
        <label>Submitter Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Attachments</relationshipLabel>
        <relationshipName>Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory_State__c</fullName>
        <formula>Project__r.Opportunity__r.Account_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>State__c</controllingField>
            <picklistValues>
                <fullName>01CT- PVAssessment Schematics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01CT- PVAssessment Breaker Box photos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01CT- PVAssessment Pathfinder Trace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01CT- PVAssessment Powerclerk Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01CT- PVAssessment PV Assessment site photo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01CT- PVAssessment Roof photo’s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01CT- PVAssessment Site Survey form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01CT- Permitting Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Attachment C NYSERDA Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Close out Images</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Conditional Utility Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Field Verification Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Final Utility Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Inspection Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Permits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Posigen QC Checklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY Install Site Safety Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment 3 Line Electric Drawing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment Agent Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment Attachment B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment Pathfinder Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment Pre-site Assessment Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment Site Photos (NYSERDA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment Site Visit/Clipboard Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02NY- PVAssessment Utility Interconnect Auth Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03CTNY- Engineering Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03CTNY- PV Assessment Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03CTNY- PV Install Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03CTNY- Design/Engineering Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breaker Box Picture</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Submitter_Notes__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Task Attachments</label>
    </listViews>
    <nameField>
        <displayFormat>ATT-{000000}</displayFormat>
        <label>Attachment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <recordTypes>
        <fullName>EE</fullName>
        <active>true</active>
        <label>EE</label>
    </recordTypes>
    <recordTypes>
        <fullName>PV_Assessment</fullName>
        <active>true</active>
        <label>PV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Removal</fullName>
        <active>true</active>
        <label>Removal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Need_Ops_Approval_First</fullName>
        <active>true</active>
        <description>Requires Ops to approve an invoice before accounting can approve it</description>
        <errorConditionFormula>AND( ISPICKVAL( PG_Inv_Approved__c,&quot;&quot;),   Approved_By_Accounting__c  = True, LastModifiedBy.ProfileId  =  &quot;00ed0000000WiaVAAS&quot;)</errorConditionFormula>
        <errorDisplayField>Approved_By_Accounting__c</errorDisplayField>
        <errorMessage>You cannot approve an invoice before the Ops team approves it</errorMessage>
    </validationRules>
</CustomObject>